entity argument